--- a/modules/ytp-assets-common/src/less/ckan.less
+++ b/modules/ytp-assets-common/src/less/ckan.less
@@ -204,6 +204,8 @@ ul.resource-list {
 
 .resource-item {
   .text-overflow;
+  white-space: normal;
+
   padding: 8px 2px 5px 60px;
   &:hover {
     background-color: @background-hilight;
