--- a/modules/ytp-assets-common/src/less/responsive.less
+++ b/modules/ytp-assets-common/src/less/responsive.less
@@ -29,6 +29,19 @@
   .alert {
     margin-bottom: (@line-height-computed/2);
   }
+
+  .dl-horizontal {
+    dt {
+      float: none;
+      font-weight: bold;
+      text-align: left !important;
+      margin: 0 !important; 
+    }
+    dd {
+      display: block;
+      margin: 0 0 (@line-height-computed/2) 0 !important;
+    }
+  }
 }
 
 /* Extra small, small, and medium devices */
